--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="./Index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
                 <li><a href="./Nosotros.html">Nosotros</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
