--- a/servicios.html
+++ b/servicios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Servicios - Atlas Prime</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body><header class="header">
     <div class="logo">
